--- a/pkg/crd/k8c.io/kubermatic.k8c.io_allowedregistries.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_allowedregistries.yaml
@@ -6,6 +6,8 @@ metadata:
     controller-gen.kubebuilder.io/version: v0.9.2
   creationTimestamp: null
   name: allowedregistries.kubermatic.k8c.io
+  labels:
+    kubermatic.k8c.io/location: master
 spec:
   group: kubermatic.k8c.io
   names:
@@ -15,46 +17,37 @@ spec:
     singular: allowedregistry
   scope: Cluster
   versions:
-  - additionalPrinterColumns:
-    - description: RegistryPrefix contains the prefix of the registry which will be
-        allowed. User clusters will be able to deploy only images which are prefixed
-        with one of the allowed image registry prefixes.
-      jsonPath: .spec.registryPrefix
-      name: RegistryPrefix
-      type: string
-    - jsonPath: .metadata.creationTimestamp
-      name: Age
-      type: date
-    name: v1
-    schema:
-      openAPIV3Schema:
-        description: AllowedRegistry is the object representing an allowed registry.
-        properties:
-          apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-            type: string
-          kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-            type: string
-          metadata:
-            type: object
-          spec:
-            description: AllowedRegistrySpec specifies the data for allowed registry
-              spec.
-            properties:
-              registryPrefix:
-                description: RegistryPrefix contains the prefix of the registry which
-                  will be allowed. User clusters will be able to deploy only images
-                  which are prefixed with one of the allowed image registry prefixes.
-                type: string
-            required:
-            - registryPrefix
-            type: object
-        type: object
-    served: true
-    storage: true
-    subresources: {}
+    - additionalPrinterColumns:
+        - description: RegistryPrefix contains the prefix of the registry which will be allowed. User clusters will be able to deploy only images which are prefixed with one of the allowed image registry prefixes.
+          jsonPath: .spec.registryPrefix
+          name: RegistryPrefix
+          type: string
+        - jsonPath: .metadata.creationTimestamp
+          name: Age
+          type: date
+      name: v1
+      schema:
+        openAPIV3Schema:
+          description: AllowedRegistry is the object representing an allowed registry.
+          properties:
+            apiVersion:
+              description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+              type: string
+            kind:
+              description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+              type: string
+            metadata:
+              type: object
+            spec:
+              description: AllowedRegistrySpec specifies the data for allowed registry spec.
+              properties:
+                registryPrefix:
+                  description: RegistryPrefix contains the prefix of the registry which will be allowed. User clusters will be able to deploy only images which are prefixed with one of the allowed image registry prefixes.
+                  type: string
+              required:
+                - registryPrefix
+              type: object
+          type: object
+      served: true
+      storage: true
+      subresources: {}
