--- a/pkg/crd/k8c.io/kubermatic.k8c.io_ipamallocations.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_ipamallocations.yaml
@@ -6,6 +6,8 @@ metadata:
     controller-gen.kubebuilder.io/version: v0.9.2
   creationTimestamp: null
   name: ipamallocations.kubermatic.k8c.io
+  labels:
+    kubermatic.k8c.io/location: master
 spec:
   group: kubermatic.k8c.io
   names:
@@ -15,57 +17,49 @@ spec:
     singular: ipamallocation
   scope: Namespaced
   versions:
-  - additionalPrinterColumns:
-    - jsonPath: .metadata.creationTimestamp
-      name: Age
-      type: date
-    name: v1
-    schema:
-      openAPIV3Schema:
-        description: IPAMAllocation is the object representing an allocation from
-          an IPAMPool made for a particular KKP user cluster.
-        properties:
-          apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-            type: string
-          kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-            type: string
-          metadata:
-            type: object
-          spec:
-            description: IPAMAllocationSpec specifies an allocation from an IPAMPool
-              made for a particular KKP user cluster.
-            properties:
-              addresses:
-                description: Addresses are the IP address ranges that are being used
-                  for the allocation. Set when "type=range".
-                items:
+    - additionalPrinterColumns:
+        - jsonPath: .metadata.creationTimestamp
+          name: Age
+          type: date
+      name: v1
+      schema:
+        openAPIV3Schema:
+          description: IPAMAllocation is the object representing an allocation from an IPAMPool made for a particular KKP user cluster.
+          properties:
+            apiVersion:
+              description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+              type: string
+            kind:
+              description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+              type: string
+            metadata:
+              type: object
+            spec:
+              description: IPAMAllocationSpec specifies an allocation from an IPAMPool made for a particular KKP user cluster.
+              properties:
+                addresses:
+                  description: Addresses are the IP address ranges that are being used for the allocation. Set when "type=range".
+                  items:
+                    type: string
+                  type: array
+                cidr:
+                  description: CIDR is the CIDR that is being used for the allocation. Set when "type=prefix".
+                  pattern: ((^((([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5]))/([0-9]|[1-2][0-9]|3[0-2])$)|(^(([0-9a-fA-F]{1,4}:){7,7}[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,7}:|([0-9a-fA-F]{1,4}:){1,6}:[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,5}(:[0-9a-fA-F]{1,4}){1,2}|([0-9a-fA-F]{1,4}:){1,4}(:[0-9a-fA-F]{1,4}){1,3}|([0-9a-fA-F]{1,4}:){1,3}(:[0-9a-fA-F]{1,4}){1,4}|([0-9a-fA-F]{1,4}:){1,2}(:[0-9a-fA-F]{1,4}){1,5}|[0-9a-fA-F]{1,4}:((:[0-9a-fA-F]{1,4}){1,6})|:((:[0-9a-fA-F]{1,4}){1,7}|:))/([0-9]|[0-9][0-9]|1[0-1][0-9]|12[0-8])$))
                   type: string
-                type: array
-              cidr:
-                description: CIDR is the CIDR that is being used for the allocation.
-                  Set when "type=prefix".
-                pattern: ((^((([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5]))/([0-9]|[1-2][0-9]|3[0-2])$)|(^(([0-9a-fA-F]{1,4}:){7,7}[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,7}:|([0-9a-fA-F]{1,4}:){1,6}:[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,5}(:[0-9a-fA-F]{1,4}){1,2}|([0-9a-fA-F]{1,4}:){1,4}(:[0-9a-fA-F]{1,4}){1,3}|([0-9a-fA-F]{1,4}:){1,3}(:[0-9a-fA-F]{1,4}){1,4}|([0-9a-fA-F]{1,4}:){1,2}(:[0-9a-fA-F]{1,4}){1,5}|[0-9a-fA-F]{1,4}:((:[0-9a-fA-F]{1,4}){1,6})|:((:[0-9a-fA-F]{1,4}){1,7}|:))/([0-9]|[0-9][0-9]|1[0-1][0-9]|12[0-8])$))
-                type: string
-              dc:
-                description: DC is the datacenter of the allocation.
-                type: string
-              type:
-                description: Type is the allocation type that is being used.
-                enum:
-                - prefix
-                - range
-                type: string
-            required:
-            - dc
-            - type
-            type: object
-        type: object
-    served: true
-    storage: true
-    subresources: {}
+                dc:
+                  description: DC is the datacenter of the allocation.
+                  type: string
+                type:
+                  description: Type is the allocation type that is being used.
+                  enum:
+                    - prefix
+                    - range
+                  type: string
+              required:
+                - dc
+                - type
+              type: object
+          type: object
+      served: true
+      storage: true
+      subresources: {}
