--- a/pkg/crd/k8c.io/kubermatic.k8c.io_ipampools.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_ipampools.yaml
@@ -6,6 +6,8 @@ metadata:
     controller-gen.kubebuilder.io/version: v0.9.2
   creationTimestamp: null
   name: ipampools.kubermatic.k8c.io
+  labels:
+    kubermatic.k8c.io/location: master
 spec:
   group: kubermatic.k8c.io
   names:
@@ -15,69 +17,59 @@ spec:
     singular: ipampool
   scope: Cluster
   versions:
-  - additionalPrinterColumns:
-    - jsonPath: .metadata.creationTimestamp
-      name: Age
-      type: date
-    name: v1
-    schema:
-      openAPIV3Schema:
-        description: IPAMPool is the object representing Multi-Cluster IP Address
-          Management (IPAM) configuration for KKP user clusters.
-        properties:
-          apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-            type: string
-          kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-            type: string
-          metadata:
-            type: object
-          spec:
-            description: IPAMPoolSpec specifies the  Multi-Cluster IP Address Management
-              (IPAM) configuration for KKP user clusters.
-            properties:
-              datacenters:
-                additionalProperties:
-                  description: IPAMPoolDatacenterSettings contains IPAM Pool configuration
-                    for a datacenter.
-                  properties:
-                    allocationPrefix:
-                      description: AllocationPrefix is the prefix for the allocation.
-                        Used when "type=prefix".
-                      maximum: 128
-                      minimum: 1
-                      type: integer
-                    allocationRange:
-                      description: AllocationRange is the range for the allocation.
-                        Used when "type=range".
-                      minimum: 1
-                      type: integer
-                    poolCidr:
-                      description: PoolCIDR is the pool CIDR to be used for the allocation.
-                      pattern: ((^((([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5]))/([0-9]|[1-2][0-9]|3[0-2])$)|(^(([0-9a-fA-F]{1,4}:){7,7}[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,7}:|([0-9a-fA-F]{1,4}:){1,6}:[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,5}(:[0-9a-fA-F]{1,4}){1,2}|([0-9a-fA-F]{1,4}:){1,4}(:[0-9a-fA-F]{1,4}){1,3}|([0-9a-fA-F]{1,4}:){1,3}(:[0-9a-fA-F]{1,4}){1,4}|([0-9a-fA-F]{1,4}:){1,2}(:[0-9a-fA-F]{1,4}){1,5}|[0-9a-fA-F]{1,4}:((:[0-9a-fA-F]{1,4}){1,6})|:((:[0-9a-fA-F]{1,4}){1,7}|:))/([0-9]|[0-9][0-9]|1[0-1][0-9]|12[0-8])$))
-                      type: string
-                    type:
-                      description: Type is the allocation type to be used.
-                      enum:
-                      - prefix
-                      - range
-                      type: string
-                  required:
-                  - poolCidr
-                  - type
+    - additionalPrinterColumns:
+        - jsonPath: .metadata.creationTimestamp
+          name: Age
+          type: date
+      name: v1
+      schema:
+        openAPIV3Schema:
+          description: IPAMPool is the object representing Multi-Cluster IP Address Management (IPAM) configuration for KKP user clusters.
+          properties:
+            apiVersion:
+              description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+              type: string
+            kind:
+              description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+              type: string
+            metadata:
+              type: object
+            spec:
+              description: IPAMPoolSpec specifies the  Multi-Cluster IP Address Management (IPAM) configuration for KKP user clusters.
+              properties:
+                datacenters:
+                  additionalProperties:
+                    description: IPAMPoolDatacenterSettings contains IPAM Pool configuration for a datacenter.
+                    properties:
+                      allocationPrefix:
+                        description: AllocationPrefix is the prefix for the allocation. Used when "type=prefix".
+                        maximum: 128
+                        minimum: 1
+                        type: integer
+                      allocationRange:
+                        description: AllocationRange is the range for the allocation. Used when "type=range".
+                        minimum: 1
+                        type: integer
+                      poolCidr:
+                        description: PoolCIDR is the pool CIDR to be used for the allocation.
+                        pattern: ((^((([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5]))/([0-9]|[1-2][0-9]|3[0-2])$)|(^(([0-9a-fA-F]{1,4}:){7,7}[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,7}:|([0-9a-fA-F]{1,4}:){1,6}:[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,5}(:[0-9a-fA-F]{1,4}){1,2}|([0-9a-fA-F]{1,4}:){1,4}(:[0-9a-fA-F]{1,4}){1,3}|([0-9a-fA-F]{1,4}:){1,3}(:[0-9a-fA-F]{1,4}){1,4}|([0-9a-fA-F]{1,4}:){1,2}(:[0-9a-fA-F]{1,4}){1,5}|[0-9a-fA-F]{1,4}:((:[0-9a-fA-F]{1,4}){1,6})|:((:[0-9a-fA-F]{1,4}){1,7}|:))/([0-9]|[0-9][0-9]|1[0-1][0-9]|12[0-8])$))
+                        type: string
+                      type:
+                        description: Type is the allocation type to be used.
+                        enum:
+                          - prefix
+                          - range
+                        type: string
+                    required:
+                      - poolCidr
+                      - type
+                    type: object
+                  description: Datacenters contains a map of datacenters (DCs) for the allocation.
                   type: object
-                description: Datacenters contains a map of datacenters (DCs) for the
-                  allocation.
-                type: object
-            required:
-            - datacenters
-            type: object
-        type: object
-    served: true
-    storage: true
-    subresources: {}
+              required:
+                - datacenters
+              type: object
+          type: object
+      served: true
+      storage: true
+      subresources: {}
