--- a/pkg/crd/k8c.io/kubermatic.k8c.io_resourcequotas.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_resourcequotas.yaml
@@ -6,6 +6,8 @@ metadata:
     controller-gen.kubebuilder.io/version: v0.9.2
   creationTimestamp: null
   name: resourcequotas.kubermatic.k8c.io
+  labels:
+    kubermatic.k8c.io/location: master
 spec:
   group: kubermatic.k8c.io
   names:
@@ -15,153 +17,133 @@ spec:
     singular: resourcequota
   scope: Cluster
   versions:
-  - additionalPrinterColumns:
-    - jsonPath: .metadata.creationTimestamp
-      name: Age
-      type: date
-    - jsonPath: .spec.subject.name
-      name: Subject Name
-      type: string
-    - jsonPath: .spec.subject.kind
-      name: Subject Kind
-      type: string
-    name: v1
-    schema:
-      openAPIV3Schema:
-        description: ResourceQuota specifies the amount of cluster resources a project
-          can use.
-        properties:
-          apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-            type: string
-          kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-            type: string
-          metadata:
-            type: object
-          spec:
-            description: ResourceQuotaSpec describes the desired state of a resource
-              quota.
-            properties:
-              quota:
-                description: Quota specifies the current maximum allowed usage of
-                  resources.
-                properties:
-                  cpu:
-                    anyOf:
-                    - type: integer
-                    - type: string
-                    description: CPU holds the quantity of CPU. For the format, please
-                      check k8s.io/apimachinery/pkg/api/resource.Quantity.
-                    pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                    x-kubernetes-int-or-string: true
-                  memory:
-                    anyOf:
-                    - type: integer
-                    - type: string
-                    description: Memory represents the quantity of RAM size. For the
-                      format, please check k8s.io/apimachinery/pkg/api/resource.Quantity.
-                    pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                    x-kubernetes-int-or-string: true
-                  storage:
-                    anyOf:
-                    - type: integer
-                    - type: string
-                    description: Storage represents the disk size. For the format,
-                      please check k8s.io/apimachinery/pkg/api/resource.Quantity.
-                    pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                    x-kubernetes-int-or-string: true
-                type: object
-              subject:
-                description: Subject specifies to which entity the quota applies to.
-                properties:
-                  kind:
-                    default: project
-                    description: Kind of the quota subject. For now the only possible
-                      kind is project.
-                    enum:
-                    - project
-                    type: string
-                  name:
-                    description: Name of the quota subject.
-                    type: string
-                required:
-                - kind
-                - name
-                type: object
-            required:
-            - quota
-            - subject
-            type: object
-          status:
-            description: ResourceQuotaStatus describes the current state of a resource
-              quota.
-            properties:
-              globalUsage:
-                description: GlobalUsage is holds the current usage of resources for
-                  all seeds.
-                properties:
-                  cpu:
-                    anyOf:
-                    - type: integer
-                    - type: string
-                    description: CPU holds the quantity of CPU. For the format, please
-                      check k8s.io/apimachinery/pkg/api/resource.Quantity.
-                    pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                    x-kubernetes-int-or-string: true
-                  memory:
-                    anyOf:
-                    - type: integer
-                    - type: string
-                    description: Memory represents the quantity of RAM size. For the
-                      format, please check k8s.io/apimachinery/pkg/api/resource.Quantity.
-                    pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                    x-kubernetes-int-or-string: true
-                  storage:
-                    anyOf:
-                    - type: integer
-                    - type: string
-                    description: Storage represents the disk size. For the format,
-                      please check k8s.io/apimachinery/pkg/api/resource.Quantity.
-                    pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                    x-kubernetes-int-or-string: true
-                type: object
-              localUsage:
-                description: LocalUsage is holds the current usage of resources for
-                  the local seed.
-                properties:
-                  cpu:
-                    anyOf:
-                    - type: integer
-                    - type: string
-                    description: CPU holds the quantity of CPU. For the format, please
-                      check k8s.io/apimachinery/pkg/api/resource.Quantity.
-                    pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                    x-kubernetes-int-or-string: true
-                  memory:
-                    anyOf:
-                    - type: integer
-                    - type: string
-                    description: Memory represents the quantity of RAM size. For the
-                      format, please check k8s.io/apimachinery/pkg/api/resource.Quantity.
-                    pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                    x-kubernetes-int-or-string: true
-                  storage:
-                    anyOf:
-                    - type: integer
-                    - type: string
-                    description: Storage represents the disk size. For the format,
-                      please check k8s.io/apimachinery/pkg/api/resource.Quantity.
-                    pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                    x-kubernetes-int-or-string: true
-                type: object
-            type: object
-        type: object
-    served: true
-    storage: true
-    subresources:
-      status: {}
+    - additionalPrinterColumns:
+        - jsonPath: .metadata.creationTimestamp
+          name: Age
+          type: date
+        - jsonPath: .spec.subject.name
+          name: Subject Name
+          type: string
+        - jsonPath: .spec.subject.kind
+          name: Subject Kind
+          type: string
+      name: v1
+      schema:
+        openAPIV3Schema:
+          description: ResourceQuota specifies the amount of cluster resources a project can use.
+          properties:
+            apiVersion:
+              description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+              type: string
+            kind:
+              description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+              type: string
+            metadata:
+              type: object
+            spec:
+              description: ResourceQuotaSpec describes the desired state of a resource quota.
+              properties:
+                quota:
+                  description: Quota specifies the current maximum allowed usage of resources.
+                  properties:
+                    cpu:
+                      anyOf:
+                        - type: integer
+                        - type: string
+                      description: CPU holds the quantity of CPU. For the format, please check k8s.io/apimachinery/pkg/api/resource.Quantity.
+                      pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                      x-kubernetes-int-or-string: true
+                    memory:
+                      anyOf:
+                        - type: integer
+                        - type: string
+                      description: Memory represents the quantity of RAM size. For the format, please check k8s.io/apimachinery/pkg/api/resource.Quantity.
+                      pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                      x-kubernetes-int-or-string: true
+                    storage:
+                      anyOf:
+                        - type: integer
+                        - type: string
+                      description: Storage represents the disk size. For the format, please check k8s.io/apimachinery/pkg/api/resource.Quantity.
+                      pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                      x-kubernetes-int-or-string: true
+                  type: object
+                subject:
+                  description: Subject specifies to which entity the quota applies to.
+                  properties:
+                    kind:
+                      default: project
+                      description: Kind of the quota subject. For now the only possible kind is project.
+                      enum:
+                        - project
+                      type: string
+                    name:
+                      description: Name of the quota subject.
+                      type: string
+                  required:
+                    - kind
+                    - name
+                  type: object
+              required:
+                - quota
+                - subject
+              type: object
+            status:
+              description: ResourceQuotaStatus describes the current state of a resource quota.
+              properties:
+                globalUsage:
+                  description: GlobalUsage is holds the current usage of resources for all seeds.
+                  properties:
+                    cpu:
+                      anyOf:
+                        - type: integer
+                        - type: string
+                      description: CPU holds the quantity of CPU. For the format, please check k8s.io/apimachinery/pkg/api/resource.Quantity.
+                      pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                      x-kubernetes-int-or-string: true
+                    memory:
+                      anyOf:
+                        - type: integer
+                        - type: string
+                      description: Memory represents the quantity of RAM size. For the format, please check k8s.io/apimachinery/pkg/api/resource.Quantity.
+                      pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                      x-kubernetes-int-or-string: true
+                    storage:
+                      anyOf:
+                        - type: integer
+                        - type: string
+                      description: Storage represents the disk size. For the format, please check k8s.io/apimachinery/pkg/api/resource.Quantity.
+                      pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                      x-kubernetes-int-or-string: true
+                  type: object
+                localUsage:
+                  description: LocalUsage is holds the current usage of resources for the local seed.
+                  properties:
+                    cpu:
+                      anyOf:
+                        - type: integer
+                        - type: string
+                      description: CPU holds the quantity of CPU. For the format, please check k8s.io/apimachinery/pkg/api/resource.Quantity.
+                      pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                      x-kubernetes-int-or-string: true
+                    memory:
+                      anyOf:
+                        - type: integer
+                        - type: string
+                      description: Memory represents the quantity of RAM size. For the format, please check k8s.io/apimachinery/pkg/api/resource.Quantity.
+                      pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                      x-kubernetes-int-or-string: true
+                    storage:
+                      anyOf:
+                        - type: integer
+                        - type: string
+                      description: Storage represents the disk size. For the format, please check k8s.io/apimachinery/pkg/api/resource.Quantity.
+                      pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                      x-kubernetes-int-or-string: true
+                  type: object
+              type: object
+          type: object
+      served: true
+      storage: true
+      subresources:
+        status: {}
